custom/less/section-docs.less
/* ... */
// Main content
.doc-content {
  width: 100%;

  &.with-comment {
    padding-left: 16px;

    @media (max-width: @screen-sm-max) {
      padding-left: 0;
    }
  }

  @media (max-width: 640px) {
    margin-top: 20px;
  }

  // Used by Download page
  .popover {

    .popover-title {
      padding-top: 9px;
      margin-top: 0;
      color: @gray;
    }
  }
}

#toc ol ol ol ol ol{
  display: none;
}
#toc ol li {
  padding-left: 10px;
}

#toc > li > ol > li {
  padding-left: 0;
}

// Download section
.dl-cell {
  padding: 15px;
  margin-bottom: 20px;
  border: 1px solid @gray-lighter;
  border-radius: 4px;

  h2 {
    margin: 0 0 10px !important;
    padding: 0 !important;
    border: none !important;
  }

  hr {
    margin: 10px 0 15px;
    border-bottom-color: @gray-lighter;
  }

  .bspopover {
    color: fade(@link-color, 80%);
  }

  .dl-cell-btn {
    margin-right: 10px;
    float: left;

    @media (max-width: @screen-xs-max) {
      margin-right: 0;
      margin-bottom: 10px;
      float: none;
    }
  }

  .list-inline {
    margin: 0;
    padding: 3px 0;

    > li {
      padding: 0;
      padding-right: 4px;

      &.muted {
        color: @gray-lighter;
      }

      .btn {
        padding-left: 0;
      }

      .icon-github {
        font-size: 20px;
        line-height: 1;
        vertical-align: -2px;
      }
    }
  }

  .btn-lg {
    margin-top: 10px;

    span {
      color: @gray-light;
    }
  }

  .dl-deps-tips {
    border: 1px solid;
    border-radius: 3px;
    font-size: 11px;
    padding: 0px;
    width: 15px;
    height: 15px;
    display: inline-block;
    line-height: 15px;
    text-align: center;
  }

  .popover {
    width: 210px;
    color: @gray-dark;

    .popover-content {

      ul {
        padding-left: 18px;
        margin-bottom: 0;
      }
    }
  }

  .checkbox {
    margin-top: 4px;
    margin-bottom: 4px;
    padding-left: 20px;
  }

  .changelog-rss {

    .icon {
      font-size: 17px;
      vertical-align: -1px;
    }

    &:hover,
    &:focus {
      color: @brand-warning;
    }
  }
}

h1 {

  .changelog-rss {
    border: 1px solid;
    padding: 2px 8px;
    border-radius: @border-radius-base;
    font-size: 17px;
    vertical-align: 3px;

    .icon {
      font-size: 17px;
      vertical-align: 0;
    }

    &:hover,
    &:focus {
      color: #fff;
      background: @brand-warning;
      border-color: @brand-warning;
    }
  }
}

.changelog-rss {
  text-decoration: none;

  &:hover,
  &:focus {
    text-decoration: none;
  }
}

.changelog-list {

  h1 {
    font-size: 18px;
    margin: 10px 0;

    &:first-child {
      margin-top: 0;
    }
  }

  ul {
    margin-bottom: 20px;

    &:last-child {
      margin-bottom: 0;
    }
  }
}

.bspopover {
  font-weight: bold;
  cursor: help;
  color: @gray-light;
}

.list-inline {

  > li {

    @media (max-width: @screen-xs-max) {

      .btn {
        margin-bottom: 15px;
      }
    }
  }
}


[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
.ng-cloak, .x-ng-cloak,
.ng-hide {
  display: none !important;
}

// demo.html
.doc-content {

  .demo-card {
    padding: 20px 15px;
    margin: 30px 0 0;
    border: 1px solid @gray-lighter;
    border-radius: 4px;

    @media(max-width: @screen-xs-max) {
      margin: 15px 0 0;
    }

    h1 {
      font-size: 24px;
      .font-logo;
      padding-top: 0;
      margin-top: 0;
    }

    .label {
      display: inline-block;
      font-size: 14px;
      margin-top: 3px;
    }

    .demo-desc {
      min-height: 100px;
    }
  }
}

// Modals
.doc-content .modal {

  h4 {
    margin: 0;
    padding: 0;
    color: #000;
  }
}
blockquote{
  font-size: 1em;
  color:#777;
}

// Comments
.inline-comment-wrap {
  position: absolute;
  top: 0;
  right: 100%;
  cursor: pointer;
  padding-right: 10px;

  blockquote & {
    padding-right: 35px; // 10px + 20px (padding) + 5px (border-left)
  }

  &:hover,
  &:focus {
    color: @link-color;
  }

  .toggle-comment {
    opacity: 0;
    transition: opacity .4s ease;

    span {
      display: block;
      position: relative;
      background: #eee;
      padding: 0 6px;
      border-radius: 4px;
      color: @gray;
      font-size: 11px;
      line-height: 18px;
      min-width: 20px;
      min-height: 18px;
      text-align: center;

      &:after {
        position: absolute;
        content: '';
        display: block;
        border: 6px solid rgba(0, 0, 0, 0);
        border-top-color: #eee;
        border-top-width: 5px;
        border-top-style: solid;
        border-right-width: 0px;
        top: 18px;
        right: 4px;
      }
    }

    var {
      font-size: 13px;
      font-style: normal;
    }

    &.has-comments {

      span {
        background: @link-color;
        color: #fff;

        &:after {
          border-top-color: @link-color;
        }
      }
    }

    .doc-content pre:hover &,
    .doc-content pre:focus &,
    .doc-content li:hover &,
    .doc-content li:focus &,
    .doc-content p:hover &,
    .doc-content p:focus & {
      opacity: 1;
      transition: none;
    }

    &.has-comments,
    .doc-content p.on & {
      opacity: 1;
    }

    .doc-content p.on & {
      color: @link-color;
    }
  }

  .icon {
    font-size: 14px;
    vertical-align: middle;
    font-weight: 600;
  }
}
/* ... */

